# melonDS

./: CMakeLists.txt
src/: Config.cpp  GPU3D_Soft.cpp  Platform.h
src/wiiu/: Platform.cpp  main.cpp
